2011-03-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Moved NSCFType definition...
	* Source/NSCFType.m: ...To here.
	* Source/NSCFType.h: NSCFType interface.
	* Source/GNUmakefile: Added NSCFType.m.
	* Headers/CoreFoundation/CFRuntime.h: Additional ivars to help
	identify CF types.
	* Tests/CFRuntime/runtime.m: Initial CFRuntime tests.

2011-03-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Minor changes to make CF types more ObjC friendly.
	* Source/CFLocale.c: (CFLocaleCreateCanonicalLanguageIdentifierFromString)
	Added.
	(CFLocaleGetValue) Added more code.
	* Tests/CFTesting.h: Fixed output of PASS_CFNEQ.

2011-03-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Initializae CFNull.
	* Source/CFBase.m: Create a CFNull class and initialize kCFNull.
	* Headers/CoreFoundation/CFRuntime.h: Add INIT_CFRUNTIME_BASE() macro.
	* Headers/CoreFoundation/CFBase.h: Minor fixed to CFNull.

2011-03-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Add check for NULL in CFEqual.
	* Source/CFLocale.c: Added a bit of code to CFLocaleGetValue().
	* Source/Identifiers.m: Added definition for calendar identifiers.
	* Tests/CFLocale/general.m: New tests.
	* Tests/CFTesting.h: Initialize char array.

2011-03-18 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFLocale.h: Added some CFLocale keys.
	* Source/CFLocale.c: Added implementation for a few more functions
	and fixed a few possible threading issues.
	* Source/GNUmakefile:
	* Source/Identifiers.m: New file to define ObjC constant string.

2011-03-14 Richard Frith-Macdonald <rfm@gnu.org>

	* Tests/GNUmakefile.super:
	* Tests/CFLocale/create.m:
	* Tests/CFTesting.h:
	Minor changes to use testsuite from gnustep-make ...
	Rename .c file to .m
	Rename Testing.h to avoid conflict with testsuite header.
	Add makefile fragment to link corebase

2011-03-13 Stefan Bidigaray <stefanbidi@gmail.com>

	* GNUmakefile: